cmake_minimum_required(VERSION 3.26)
project(lab1)
project(lab2)
project(lab3)
project(lab4)
project(lab5)

set(CMAKE_CXX_STANDARD 23)

add_executable(lab1 lab1/main.cpp)
add_executable(lab2 lab2/main.cpp)
add_executable(lab3 lab3/main.cpp)
add_executable(lab4 lab4/main.cpp)
add_executable(lab5 lab5/main.cpp)
